--- a/acerca.html
+++ b/acerca.html
@@ -23,7 +23,7 @@
   <main>
     <section id="acerca">
       <h2>Acerca de Mí</h2>
-      <img src="Imagenes/Fto1.jpg" alt="Foto de Stiveen" class="foto-perfil" />
+      <img src="./Imagenes/Fto1.jpg" alt="Foto de Stiveen" class="foto-perfil" />
       <p><strong>Mi nombre es Stiveen Mambuscay</strong> y soy Técnico en Sistemas Informáticos. Desde joven, la tecnología ha sido mi gran pasión. A lo largo de mi carrera, he adquirido una amplia experiencia en la gestión de infraestructuras informáticas, desarrollo web, redes y bases de datos. Siempre me ha motivado encontrar soluciones innovadoras a los problemas más complejos y optimizar procesos mediante la automatización y el uso eficiente de la tecnología.</p>
       <p>Mi formación académica en tecnología y mis años de experiencia profesional me han permitido desarrollar un enfoque práctico y analítico en todo lo que hago. Me especializo en la implementación de soluciones que mejoren la eficiencia de los sistemas, el rendimiento de las redes y la usabilidad de las aplicaciones web.</p>
       <p>Fuera de la tecnología, me considero una persona curiosa, dedicada al aprendizaje continuo y al intercambio de conocimientos. Creo firmemente que el trabajo en equipo y la colaboración son clave para el éxito en cualquier proyecto.</p>
